android/src/main/jniLibs/x86_64/libpolygonid.h

typedef enum
{
	PLGNSTATUSCODE_ERROR,
	PLGNSTATUSCODE_NIL_POINTER,
	// error extracting credential status from verifiable credential
	PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_EXTRACTION_ERROR,
	// error resolving credential status (e.g. getting the status from chain of DHS)
	PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_RESOLVE_ERROR,
	// error getting merkletree proof from credential status
	PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_MT_BUILD_ERROR,
	// merkletree proof is invalid
	PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_MT_STATE_ERROR,
	// credential is revoked
	PLGNSTATUSCODE_USER_CREDENTIAL_STATUS_REVOKED_ERROR,
	// the same as above but for issuer credential (for signature proofs)
	PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_EXTRACTION_ERROR,
	PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_RESOLVE_ERROR,
	PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_MT_BUILD_ERROR,
	PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_MT_STATE_ERROR,
	PLGNSTATUSCODE_ISSUER_CREDENTIAL_STATUS_REVOKED_ERROR,
} PLGNStatusCode;
typedef struct _PLGNStatus
{
	PLGNStatusCode status;
	char *error_msg;
} PLGNStatus;
typedef unsigned char GoUint8;
extern GoUint8 PLGNAuthV2InputsMarshal(char** jsonResponse, char* in, PLGNStatus** status);
extern GoUint8 PLGNCalculateGenesisID(char** jsonResponse, char* in, PLGNStatus** status);
extern GoUint8 PLGNNewGenesisID(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNNewGenesisIDFromEth(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNW3CCredentialToCoreClaim(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNCreateClaim(char** jsonResponse, char* in, PLGNStatus** status);
extern GoUint8 PLGNIDToInt(char** jsonResponse, char* in, PLGNStatus** status);
extern GoUint8 PLGNProofFromSmartContract(char** jsonResponse, char* in, PLGNStatus** status);
extern GoUint8 PLGNProfileID(char** jsonResponse, char* in, PLGNStatus** status);
extern GoUint8 PLGNAtomicQuerySigV2Inputs(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNSigV2Inputs(char** jsonResponse, char* in, PLGNStatus** status);
extern GoUint8 PLGNAtomicQueryMtpV2Inputs(char** jsonResponse, char* in, char* cfg, PLGNStatus** status);
extern GoUint8 PLGNMtpV2Inputs(char** jsonResponse, char* in, PLGNStatus** status);